test using boost to list all files in a dir

--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -4,11 +4,20 @@ project (object_detection_srzn_test)
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 find_package(CUDA)
+find_package(Boost 1.46 COMPONENTS filesystem system thread python)
+#message(${Boost_INCLUDE_DIR})
+message(${Boost_LIBRARIES})
+#get_cmake_property(_variableNames VARIABLES)
+#foreach (_variableName ${_variableNames})
+  #message(STATUS "${_variableName}=${${_variableName}}")
+#endforeach()
 #find_package(Boost REQUIRED)
 #include_directories(${Boost_INCLUDE_DIRS})
 #set(FaceRecSrzn_DIR "/home/mythxcq/work/face_recognition_srzn/face_rec_lib/install/lib/CMake/FaceRecSrzn")
 #find_package(FaceRecSrzn REQUIRED)
-include_directories("../include")
+include_directories("../include"
+  "${Boost_INCLUDE_DIRS}"
+  )
 link_directories("../lib")
 set(ObjectDetectionSrzn_LIBRARIES "object_detection_srzn")
 
@@ -17,8 +26,8 @@ set(ObjectDetectionSrzn_LIBRARIES "object_detection_srzn")
 
 add_executable(test test.cpp)
 IF(USE_GPU)
-target_link_libraries(test ${OpenCV_LIBRARIES} ${ObjectDetectionSrzn_LIBRARIES} ${CUDA_curand_LIBRARY} ${CUDA_CUBLAS_LIBRARIES})
+  target_link_libraries(test ${OpenCV_LIBRARIES} ${ObjectDetectionSrzn_LIBRARIES} ${CUDA_curand_LIBRARY} ${CUDA_CUBLAS_LIBRARIES} ${Boost_LIBRARIES} )
 ELSE(USE_GPU)
-target_link_libraries(test ${OpenCV_LIBRARIES} ${ObjectDetectionSrzn_LIBRARIES} )
+  target_link_libraries(test ${OpenCV_LIBRARIES} ${ObjectDetectionSrzn_LIBRARIES} ${Boost_LIBRARIES} )
 ENDIF(USE_GPU)
 
